--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -7,10 +7,11 @@
 
 <body>
   <!-- This form is for Netlify build-time detection only -->
-  <form name="contact" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" required />
+    <input type="email" name="email" required />
+    <textarea name="message" required></textarea>
+    <input type="hidden" name="bot-field" />
   </form>
 </body>
 
