--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -8,6 +8,7 @@
 <body>
   <!-- This form is for Netlify build-time detection only -->
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="hidden" name="form-name" value="contact" />
     <input type="text" name="name" required />
     <input type="email" name="email" required />
     <textarea name="message" required></textarea>
